--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html,body {
   -moz-osx-font-smoothing: grayscale;
 }
 html,body,#root {
-  background-color: aliceblue;
+  background-color: #eceff1;
 }
 
 code {
@@ -20,14 +20,23 @@ code {
   color: red;
 }
 
+.odd-column-cell-color{
+  background-color: #f5f7fb;
+}
+.MuiDataGrid-cell{
+  color: #757576;
+
+}
+
 .MuiDataGrid-row:nth-child(even){
-  background-color: #f3f0f0;
+  background-color: #e0f7fa;
 }
 .MuiDataGrid-columnHeaders{
-  background-color: #212121;
-  color: #fff;
+  background-color: #00acc1
+  ;
+  /* color: #fff; */
 }
 
 .MuiDataGrid-columnHeaderTitleContainer > span{
-  color: #fff;
+  /* color: #fff; */
 } 
