--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,15 @@ code {
   background-color: #00acc1;
 }
 
+.add-pseudo::before {
+  content: '\25C0';
+  font-size: 10px;
+}
+.add-pseudo::after {
+  content: '\25B6';
+  font-size: 10px;
+}
+
 /* .MuiDataGrid-columnHeaderTitleContainer > span{
   color: #fff;
 }  */
